# YOLO-libtorch-pipeline

./: .gitignore  CMakeLists.txt  README.md  Train.csv  abc.npy
src/: dataloader.h  inference.cpp  main.cpp  model.h  train.cpp
